--- a/index3.html
+++ b/index3.html
@@ -72,7 +72,7 @@ function download_screen_recording_video(recordedChunks) {
 
 async function run_voice_to_text() {
 
-    const recognition = new (window.SpeechRecognition || window.webkitSpeechRecognition || window.mozSpeechRecognition || window.msSpeechRecognition)();
+    const recognition = new SpeechRecognition();
 
     recognition.lang = "en-US";
 
@@ -84,7 +84,7 @@ async function run_voice_to_text() {
         document.getElementById("output").textContent = event.results[0][0].transcript;
     };
 
-    recognition.onend = (event) => {
+    recognition.onend = () => {
         document.getElementById("run_voice_to_text").textContent = "run_voice_to_text";
     };
 }
