--- a/index3.html
+++ b/index3.html
@@ -70,13 +70,15 @@ function download_screen_recording_video(recordedChunks) {
 
 // -------------------------------------------------
 
-const recognition = new (window.SpeechRecognition || window.webkitSpeechRecognition)();
+var recognition = new (window.SpeechRecognition || window.webkitSpeechRecognition || window.mozSpeechRecognition || window.msSpeechRecognition)();
     
 async function run_voice_to_text() {
 
-    // const recognition = new webkitSpeechRecognition();
+    recognition = new SpeechRecognition();
 
     recognition.lang = "en-US";
+    recognition.continuous = true;
+    recognition.interimResults = true;
 
     recognition.onstart = () => { document.getElementById("run_voice_to_text").textContent = "Recording..."; }
     
