--- a/index3.html
+++ b/index3.html
@@ -6,11 +6,9 @@
 
 <button type="button" id="run_video_screen_capture" onclick="run_video_screen_capture()" style="display:block">run_video_screen_capture</button>
 
-<button type="button" id="run_voice_to_text" onclick="run_voice_to_text()" style="display:block">run_voice_to_text</button>
+<!-- <button type="button" id="run_voice_to_text" onclick="run_voice_to_text()" style="display:block">run_voice_to_text</button> -->
 
-<div id="output"></div>
-    
-<input type="text" name="" id="input" value="" placeholder="input" style="display:block;">
+<!-- <div id="output"></div> -->
     
 <script>
 
