--- a/loading_text_using_script.html
+++ b/loading_text_using_script.html
@@ -13,28 +13,37 @@
 // -------------------------------------------------
   
 function run_fetch_script() {
-  
-  loadScript()
-      .then( data  => { console.log("Script loaded successfully", data); })
-      .catch( err => { console.error(err); });
+
+	// https://cdn.jsdelivr.net/npm/library_to_run_github_actions@1.0.1/index.min.js
+	loadScript()
+		.then( data  => { console.log("Script loaded successfully", data); })
+		.catch( err => { console.error(err); });
+
+	// Test a function in the imported script
+	var out = async () => { await rand_perm([2, 4, 5]); }
+	console.log('out: ', out);
+	
 }
 
 // -------------------------------------------------
 
-const loadScript = (async = true, type = "text/javascript") => {
+const loadScript = () => {
+	
+	const FILE_URL = document.getElementById('url').value;
+	console.log("FILE_URL: ", FILE_URL);
 
-  const FILE_URL = document.getElementById('url').value;
-  console.log("FILE_URL: ", FILE_URL);
-  
-    return new Promise((resolve, reject) => {
+	const type = "text/javascript";
+	// const type = "module";
+	
+	return new Promise((resolve, reject) => {
         try {
             const scriptElement = document.createElement("script");
             scriptElement.type = type;
-            scriptElement.async = async;
-            scriptElement.src =FILE_URL;
-            scriptElement.crossorigin="*";
-            scriptElement.redirect="follow";
-            scriptElement.mode='cors';
+            scriptElement.async = true;
+            scriptElement.src = FILE_URL;
+            scriptElement.crossorigin = "*";
+            scriptElement.redirect = "follow";
+            scriptElement.mode = 'cors';
 
             scriptElement.addEventListener("load", (ev) => {
                 resolve({ status: true });
