--- a/loading_text_using_script.html
+++ b/loading_text_using_script.html
@@ -32,8 +32,8 @@ const loadScript = () => {
 	const FILE_URL = document.getElementById('url').value;
 	console.log("FILE_URL: ", FILE_URL);
 
-	const type = "text/javascript";
-	// const type = "module";
+	// const type = "text/javascript";
+	const type = "module";
 	
 	return new Promise((resolve, reject) => {
         try {
