--- a/index2.html
+++ b/index2.html
@@ -146,7 +146,7 @@ async function record_audio() {
           mainContainer.appendChild(clipContainer);
   
             audio.controls = true;
-            const blob = new Blob(chunks, { type: "audio/ogg; codecs=opus" });
+            const blob = new Blob(chunks, { type: "audio/mp3; codecs=opus" });
             chunks = [];
             const audioURL = URL.createObjectURL(blob);
             audio.src = audioURL;
