--- a/index2.html
+++ b/index2.html
@@ -185,11 +185,11 @@ function handleDataAvailable_audio(event) {
         var blob = new Blob(recordedChunks, {type: "audio/mp3"});
         var url = URL.createObjectURL(blob);
 
-	var out  = (async () => { 
+	var out  = async () => { 
 		await download_audio_recording(url)
 			.then(async function() { await play_sound_from_a_url(url); })
 			.then(function() { window.URL.revokeObjectURL(url); }); 
-	});
+	};
         
         
     }
