--- a/index3.html
+++ b/index3.html
@@ -50,7 +50,11 @@ async function run_video_screen_capture() {
 function handleDataAvailable(event) {
 	if (event.data.size > 0) {
 		// event.data = Array [ Blob ] 0: Blob { size: 105474, type: "video/webm; codecs=vp8" }
+		console.log('event.data: ', event.data);
+		
 		var blob_object = event.data[0];
+		console.log('blob_object: ', blob_object);
+		
 		download_screen_recording_video(blob_object);
 	}
 }
@@ -59,6 +63,8 @@ function handleDataAvailable(event) {
   
 function download_screen_recording_video(blob_object) {
 
+	console.log('blob_object: ', blob_object);
+	
       var url = URL.createObjectURL(blob_object);
       var a = document.createElement("a");
       document.body.appendChild(a);
@@ -113,7 +119,7 @@ async function record_audio() {
 		// var mediaRecorder = new MediaRecorder(stream);
 		// OR
 		// This specifies the type of blob it will create for event.data
-		var options = {mimeType: "audio/mp3"};
+		var options = {mimeType: "audio/webm"};
 		var mediaRecorder = new MediaRecorder(stream, options);
             
 		mediaRecorder.start();
