--- a/index3.html
+++ b/index3.html
@@ -31,7 +31,7 @@ async function run_video_screen_capture() {
         .then(stream => {  
 		
 		// This specifies the type of blob it will create for event.data
-		var options = {mimeType: "video/webm; codecs=vp8"};
+		var options = {mimeType: "video/webm; audio/webm;"}; //  codecs=vp8
 		
 		var mediaRecorder = new MediaRecorder(stream, options);
 
@@ -136,31 +136,7 @@ async function record_audio() {
 		// When mediaRecorder.stop() is called mediaRecorder.ondataavailable is run.
 		// mediaRecorder.stop() is called when the eventlistener is called for pushing the button stop_record_audio 
 		mediaRecorder.ondataavailable = handleDataAvailable_audio;
-		// OR
-
-		// Way 1
-		// document.getElementById("stop_record_audio").addEventListener("click", handleDataAvailable_audio_way1, false);
-
-
-		function handleDataAvailable_audio_way1(event) {
-
-			console.log('event: ', event);
-			
-			// Stop recording
-			mediaRecorder.stop();
-			console.log("recorder stopped - mediaRecorder.state: ", mediaRecorder.state);
-			document.getElementById("record_audio").style.background = "";
-			document.getElementById("record_audio").style.color = "";
-
-			// If the recorded audio has size greater than zero, save it in an array
-			if (event.data.size > 0) {
-				// event.data = Array [ Blob ] 0: Blob { size: 105474, type: "audio/mp3" }
-				var blob_object = event.data[0];
-				var url = URL.createObjectURL(blob_object);
-				console.log('url: ', url);
-			}
-			document.getElementById("stop_record_audio").removeEventListener("click", handleDataAvailable_audio);
-		}
+		
             
       })
       .catch((err) => { console.error(`The following error occurred: ${err}`); });
@@ -182,7 +158,7 @@ function handleDataAvailable_audio(event) {
 	document.getElementById("stop_record_audio").removeEventListener("click", handleDataAvailable_audio);
 
 	download_audio_recording(url);
-	play_sound_from_a_url(url);
+	play_sound(event.data);
 }
 
 // -------------------------------------------------
@@ -197,24 +173,27 @@ async function download_audio_recording(url) {
       
 	a.click();
   
-	// window.URL.revokeObjectURL(url);
+	URL.revokeObjectURL(url);
 }
 
 
 
 // -------------------------------------------------
 
-async function play_sound_from_a_url(url) {
+async function play_sound(blob_object) {
+
+	var file_blob_object = new File ([blob_object], 'recorded_audio', {type: "audio/mp3"});
+	var url_file_blob_object = URL.createObjectURL(file_blob_object);
 	
 	// Create an AudioElement
 	const audioElement = document.createElement('audio');
   
 	audioElement.setAttribute("controls", true);
-	// audioElement.setAttribute('crossOrigin', "anonymous");
+	audioElement.setAttribute('crossOrigin', "anonymous");
 	// audioElement.setAttribute('autoplay', true);
 	audioElement.setAttribute('preload', "auto");
 	// OR
-	audioElement.setAttribute("src", url);
+	audioElement.setAttribute("src", url_file_blob_object);
  
 	// -----------------------------------------------
  
@@ -226,7 +205,7 @@ async function play_sound_from_a_url(url) {
 	// Create an SourceElement (audioSourceNode)
 	var sourceElement = document.createElement('source');
   
-	sourceElement.setAttribute("src", url);
+	sourceElement.setAttribute("src", url_file_blob_object);
  
 	// -----------------------------------------------
   
@@ -234,7 +213,7 @@ async function play_sound_from_a_url(url) {
   
 	document.getElementById('data_display').appendChild(audioElement);
 
-	window.URL.revokeObjectURL(url);
+	URL.revokeObjectURL(url_file_blob_object);
 }
 
 // -------------------------------------------------
