--- a/index3.html
+++ b/index3.html
@@ -12,8 +12,11 @@
 
 <div id="data_display" style="display:block; text-align: left; width: 600px;">
 
+<label for="select_video">Select an video:</label> 
 <input type="file" id="upload_video_file" accept="video/*" style="display:block">
-<input type="file" id="upload_audio_file" accept="audio/*" style="display:block">
+
+<label for="select_audio">Select an audio:</label> 
+<input type="file" id="upload_audio_file" accept="video/*" style="display:block">
 <button type="button" id="combine_audio_video" onclick="combine_audio_video()" style="display:block">combine_audio_video</button>
 
 <script src='https://unpkg.com/@ffmpeg/ffmpeg@0.9.6/dist/ffmpeg.min.js'></script>
@@ -124,7 +127,7 @@ async function record_audio() {
 		// var mediaRecorder = new MediaRecorder(stream);
 		// OR
 		// This specifies the type of blob it will create for event.data
-		var options = {mimeType: "audio/mp4"};
+		var options = {mimeType: "audio/webm"};
 		var mediaRecorder = new MediaRecorder(stream, options);
             
 		mediaRecorder.start();
@@ -318,18 +321,19 @@ async function combine_audio_video() {
 	
 	await ffmpeg.load();
 	
-	ffmpeg.FS('writeFile', 'video.mp4', await fetch_file(base64_string_video, file_name_video, "video/webm"));
-	ffmpeg.FS('writeFile', 'audio.mp4', await fetch_file(base64_string_audio, file_name_audio, "audio/webm"));
+	ffmpeg.FS('writeFile', 'video.webm', await fetch_file(base64_string_video, file_name_video, "video/webm"));
+	ffmpeg.FS('writeFile', 'audio.webm', await fetch_file(base64_string_audio, file_name_audio, "audio/webm"));
 	
-	await ffmpeg.run('-i', 'video.mp4', '-i', 'audio.mp4', '-c', 'copy', 'output.mp4');
+	await ffmpeg.run('-i', 'video.webm', '-i', 'audio.webm', '-c', 'copy', 'output.webm');
 	
-	let data = await ffmpeg.FS('readFile', 'output.mp4');
+	let data = await ffmpeg.FS('readFile', 'output.webm');
+	console.log('data: ', data);
 	
-	const uint8Array_audio_video = new Uint8Array(data.buffer);
+	// const uint8Array_audio_video = new Uint8Array(data.buffer);
 
-	const blob_object = new Blob(uint8Array_audio_video, {type: "video/webm"});
+	// const blob_object = new Blob(uint8Array_audio_video, {type: "video/webm"});
 
-	download_screen_recording_video(blob_object);
+	// download_screen_recording_video(blob_object);
 };
 
     
