--- a/index3.html
+++ b/index3.html
@@ -332,7 +332,7 @@ async function combine_audio_video() {
 
 	// OR
 
-	const ffmpeg = FFmpegWASM.FFmpeg();
+	const ffmpeg = new FFmpegWASM.FFmpeg();
 
 
 // How does one call the Object { FFmpeg: Getter, ... } FFmpeg: __esModule: true Symbol(Symbol.toStringTag): "Module" <get FFmpeg()>: function FFmpeg()
