--- a/index3.html
+++ b/index3.html
@@ -239,9 +239,9 @@ function play_sound(blob_object) {
 // -------------------------------------------------
 
 // The eventlistener needs to be always running, to detect which file the user selected with browse
-document.getElementById("upload_audio_file").addEventListener("change", previewInput_audio, false);
-var file_name_audio;
-var base64_string_audio;
+// document.getElementById("upload_audio_file").addEventListener("change", previewInput_audio, false);
+// var file_name_audio;
+// var base64_string_audio;
 	
 async function previewInput_audio(event) {
 	
@@ -280,9 +280,9 @@ async function previewInput_audio(event) {
 
 // -------------------------------------------------
 
-document.getElementById("upload_video_file").addEventListener("change", previewInput_video, false);
-var file_name_video;
-var base64_string_video;
+// document.getElementById("upload_video_file").addEventListener("change", previewInput_video, false);
+// var file_name_video;
+// var base64_string_video;
 	
 async function previewInput_video(event) {
 	
