--- a/index3.html
+++ b/index3.html
@@ -12,14 +12,13 @@
 
 <div id="data_display" style="display:block; text-align: left; width: 600px;">
 
-<!-- <label for="select_video">Select an video:</label> -->
-<!-- <input type="file" id="upload_video_file" accept="video/*" style="display:block"> -->
+<label for="select_video">Select an video:</label>
+<input type="file" id="upload_video_file" accept="video/*" style="display:block">
 
-<!-- <label for="select_audio">Select an audio:</label> -->
-<!-- <input type="file" id="upload_audio_file" accept="video/*" style="display:block"> -->
+<label for="select_audio">Select an audio:</label>
+<input type="file" id="upload_audio_file" accept="video/*" style="display:block">
 
-<!-- <button type="button" id="combine_audio_video" onclick="combine_audio_video()" style="display:block">combine_audio_video</button> -->
-
+<button type="button" id="combine_audio_video" onclick="combine_audio_video()" style="display:block">combine_audio_video</button>
 
 
 <!-- <script src="https://cdn.jsdelivr.net/npm/@ffmpeg/ffmpeg@0.12.10/dist/umd/ffmpeg.min.js" crossorigin></script> -->
@@ -130,8 +129,6 @@ async function record_audio() {
     await navigator.mediaDevices.getUserMedia(MediaOptions)
         .then((stream) => {
 		
-		// var mediaRecorder = new MediaRecorder(stream);
-		// OR
 		// This specifies the type of blob it will create for event.data
 		var options = {mimeType: "audio/webm"};
 		var mediaRecorder = new MediaRecorder(stream, options);
@@ -239,9 +236,9 @@ function play_sound(blob_object) {
 // -------------------------------------------------
 
 // The eventlistener needs to be always running, to detect which file the user selected with browse
-// document.getElementById("upload_audio_file").addEventListener("change", previewInput_audio, false);
-// var file_name_audio;
-// var base64_string_audio;
+document.getElementById("upload_audio_file").addEventListener("change", previewInput_audio, false);
+var file_name_audio;
+var base64_string_audio;
 	
 async function previewInput_audio(event) {
 	
@@ -280,9 +277,9 @@ async function previewInput_audio(event) {
 
 // -------------------------------------------------
 
-// document.getElementById("upload_video_file").addEventListener("change", previewInput_video, false);
-// var file_name_video;
-// var base64_string_video;
+document.getElementById("upload_video_file").addEventListener("change", previewInput_video, false);
+var file_name_video;
+var base64_string_video;
 	
 async function previewInput_video(event) {
 	
@@ -318,6 +315,10 @@ async function fetch_file(base64_string, file_name, file_type) {
 		.then(response => response.blob())
 		.then(async function(blob_object) { 
 			return new File ([blob_object], file_name, {type: file_type});
+		})
+		.then(async function(file_blob_object) {
+			// Create a url
+			return URL.createObjectURL(file_blob_object);
 		})
 		.catch(error => { document.getElementById('error').innerHTML = error; });
 }
@@ -366,7 +367,45 @@ async function fetch_file(base64_string, file_name, file_type) {
 	// download_screen_recording_video(blob_object);
 // };
 
-    
+	
+async function combine_audio_video() {
+	
+	const videoElement = document.createElement('video');
+	videoElement.src = await fetch_file(base64_string_video, file_name_video, "video/webm") // 'video.webm';
+	videoElement.autoplay = true;
+
+	const audioElement = document.createElement('audio');
+	audioElement.src = await fetch_file(base64_string_audio, file_name_audio, "audio/webm") // 'audio.webm';
+	audioElement.autoplay = true;
+
+	const stream = new MediaStream();
+	stream.addTrack(videoElement.captureStream().getVideoTracks()[0]);
+	stream.addTrack(audioElement.captureStream().getAudioTracks()[0]);
+
+	const recorder = new MediaRecorder(stream, { mimeType: 'video/webm' });
+	const chunks = [];
+
+	recorder.ondataavailable = (event) => {
+		if (event.data.size > 0) {
+			chunks.push(event.data);
+		}
+	};
+	
+	recorder.onstop = () => {
+		const combinedBlob = new Blob(chunks, { type: 'video/webm' });
+		const combinedVideo = document.createElement('video');
+		combinedVideo.src = URL.createObjectURL(combinedBlob);
+		combinedVideo.controls = true;
+		document.body.appendChild(combinedVideo);
+	};
+	
+	recorder.start();
+	setTimeout(() => { recorder.stop(); }, 10000); // Record for 10 seconds
+	
+}
+
+
+	
 </script>
 </body>
 </html>
